# rfcb

./: .env  Cargo.toml  LICENSE
entity/src/entities/: mod.rs  participants.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  migrations.rs  timestamps.rs
migration/src/migrations/: m20230203_135154_create_participants.rs
migrations/: 20230126225253_participants.down.sql  20230126225253_participants.up.sql  20230217202054_rfcb.down.sql  20230217202054_rfcb.up.sql  20230414142532_vote.down.sql  20230414142532_vote.up.sql
migrations/2023-01-21-150927_create_participants/: up.sql
repo/: Cargo.toml
repo/migrations/: 20230726050532_test_setup.up.sql
repo/src/: assocs.rs  attributes.rs  error.rs  lib.rs  repo.rs
src/: api_error.rs  changeset.rs  database.rs  entities.rs  lib.rs  main.rs  repo.rs  schema.rs
src/entites/: participants.rs
src/entities/: motion.rs  participants.rs  rfc.rs  vote.rs
src/entities/rfc/: data_bindings.rs  entity.rs  rfc.rs
src/entities/vote/: data_bindings.rs  entity.rs
tests/: database_tests.rs  integration_test.rs  rfc_test.rs
