[package]
name = "rfcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "postgres", "macros", "migrate", "chrono" ] }
dotenvy = "0.15"
actix-web = "4"


[profile.dev.package.sqlx-macros]
opt-level = 3
