[package]
name = "rfcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "postgres", "macros", "migrate", "chrono" ] }
sea-query = {version = "0", features = ["attr", "with-chrono"]}
dotenvy = "0.15"
actix-web = "4"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
chrono = "0.4"
validator = { version = "0.15", features = ["derive"] }


[dev-dependencies]
fake = "2.5"
rand = "0.8"

[profile.dev.package.sqlx-macros]
opt-level = 3
