[package]
name = "rfcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4"
derive-getters = "0.3.0"
dotenvy = "0.15"
fake = "2.5"
rand = "0.8"
sea-query = {version = "0", features = ["attr", "with-chrono"]}
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "postgres", "macros", "migrate", "chrono" ] }
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
regex = "1.8.1"
# fake = "2.5"
# rand = "0.8"

[profile.dev.package.sqlx-macros]
opt-level = 3
